@@ -52,6 +52,7 @@ Trunk (unreleased changes)
 
   BUG FIXES
 
+    HAMA-64: Bytes and Double convert (edwardyoon)
     HAMA-55: Write dimension attributes when job completed (edwardyoon)
     HAMA-54: Split doesn't split by map task num (edwardyoon)
     HAMA-53: NullPointerException on distributed cluster (edwardyoon)
